[package]
name = "attack"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
tokio = { version = "1.12.0", features = ["full"] }
url = "2.2.2"
reqwest = { version = "0.11.5", features = ["trust-dns"] }