[package]
name = "attack"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.5"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
reqwest = { version = "0.11.20", features = ["trust-dns", "json", "rustls-tls"], default-features = false }
trust-dns-resolver = "*"
pprof = { version = "0.13", features = ["flamegraph"] }
rand = "0.8.5"